testdata/baselines/reference/submodule/conformance/jsDeclarationsUniqueSymbolUsage.errors.txt
b.js(2,28): error TS2694: Namespace '""a.js""' has no exported member 'WithSymbol'.


==== a.js (0 errors) ====
    export const kSymbol = Symbol("my-symbol");
    
    /**
     * @typedef {{[kSymbol]: true}} WithSymbol
     */
==== b.js (1 errors) ====
    /**
     * @returns {import('./a').WithSymbol} 
                               ~~~~~~~~~~
!!! error TS2694: Namespace '""a.js""' has no exported member 'WithSymbol'.
     * @param {import('./a').WithSymbol} value 
     */
    export function b(value) {
        return value;
    }
    